--- a/doc/man/nobilitas-qt.1
+++ b/doc/man/nobilitas-qt.1
@@ -609,7 +609,7 @@ Show splash screen on startup (default: 1)
 Copyright (C) 2009-2019 The Nobilitas Core developers
 
 Please contribute if you find Nobilitas Core useful. Visit
-<https://nobilitascore.org> for further information about the software.
+<https://bitcoincore.org> for further information about the software.
 The source code is available from <https://github.com/nobilitas/nobilitas>.
 
 This is experimental software.
