--- a/doc/man/nobilitas-wallet.1
+++ b/doc/man/nobilitas-wallet.1
@@ -55,7 +55,7 @@ Get wallet info
 Copyright (C) 2009-2019 The Nobilitas Core developers
 
 Please contribute if you find Nobilitas Core useful. Visit
-<https://nobilitascore.org> for further information about the software.
+<https://bitcoincore.org> for further information about the software.
 The source code is available from <https://github.com/nobilitas/nobilitas>.
 
 This is experimental software.
