--- a/doc/man/nobilitasd.1
+++ b/doc/man/nobilitasd.1
@@ -583,7 +583,7 @@ Accept command line and JSON\-RPC commands
 Copyright (C) 2009-2019 The Nobilitas Core developers
 
 Please contribute if you find Nobilitas Core useful. Visit
-<https://nobilitascore.org> for further information about the software.
+<https://bitcoincore.org> for further information about the software.
 The source code is available from <https://github.com/nobilitas/nobilitas>.
 
 This is experimental software.
